# levindorge-back

./: .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yaml  justfile  pyproject.toml
.github/workflows/: ci.yaml
app/api/: app.py  dependencies.py  handlers.py
app/api/articles/: dtos.py  router.py
app/core/: app.py  config.py  context.py
app/domain/: context.py  domain.py  entities.py  exceptions.py  repository.py
app/domain/articles/: commands.py  entities.py  repository.py
app/domain/categories/: entities.py  repository.py
app/domain/producers/: entities.py  repository.py
app/infrastructure/repository/: articles.py  base.py  categories.py  producers.py
factories/: articles.py  categories.py  producers.py
tests/: conftest.py
tests/api/articles/: test_router.py
tests/fixtures/: factories.py  repositories.py
tests/fixtures/factories/: articles.py  base.py  categories.py  fixtures.py  producers.py
tests/infrastructure/repository/: test_pagination.py
