[project]
name = "levindorge-back"
version = "0.0.9"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.12.0",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "faker>=37.1.0",
    "httpx>=0.28.1",
    "pre-commit>=4.2",
    "pyright==1.1.400",
    "pytest>=8.3",
    "ruff==0.11.7",
]

[tool.ruff]
output-format = "concise"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "PL",  # Pylint
    "RUF",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)30s - %(message)s"
